--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               countdownDisplay.textContent = seconds;
               if (seconds <= 0) {
                   clearInterval(countdownInterval);
-                  window.location.href = ' '; 
+                  window.location.href = 'https://guttulaomsai.github.io/Baalu/'; 
               }
           }
       
