--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         padding: 10px 0;
         text-align: center;
         font-size: 18px;
+        margin-top: 560px;
     }
 
     </style>
