--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  > div {
+   div {
     height: content;
   }
   .screen {
@@ -71,6 +71,9 @@
         text-align: center;
         font-size: 18px;
     }
+    .thank-you {
+            fill: #32CD32; 
+        }
 
     </style>
 </head>
