--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               countdownDisplay.textContent = seconds;
               if (seconds <= 0) {
                   clearInterval(countdownInterval);
-                  window.location.href = 'https://guttulaomsai.github.io/Baalu/'; 
+                  window.location.href = 'https://guttulaomsai.github.io/Balu/'; 
               }
           }
       
